# regedit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  js-binding.d.ts  js-binding.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: benchmarks.spec.ts  regedit-rs.spec.ts
benchmark/: bench.ts
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
