[package]
edition = "2021"
name = "regedit-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.16.0"
winreg = "0.52.0"

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
