[package]
edition = "2024"
name = "regedit-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.5.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "3.3.3"
winreg = "0.55.0"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
